--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,13 @@
             android:id="@+id/viewpager_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:ignore="MissingConstraints"/>
+            tools:ignore="MissingConstraints">
 
     <android.support.design.widget.TabLayout
             android:id="@+id/tabs_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"/>
+    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
